# server-manager-discord

./: .gitignore  Procfile  README.md  pyproject.toml  requirements-local.txt  requirements.txt  run_all.py
bots/persona/: README.md  mojibake_fix.txt  persona_bot.py  requirements.txt  system_prompt.txt
bots/protector/: README.md  bad_word_scanner.py  content_analyzer.py  instructions.txt  live_monitor.py  sample_deleted_messages.txt  server_helper.py  setup_moderation.py  setup_server_helper.py  test_full.json
bots/protector/chat_data/: all_messages.txt  analysis.json  example_messages.json  system_prompt.txt  training_data.jsonl
bots/protector/common/: consts.py  user_agents.txt
bots/trannyverse/: .gitignore  __init__.py  activity.py  analytics_commands.py  ban_table_db.json  bot1.py  daily_bumper.py  deathmatch_table_db.json  diva_mute_table_db.json  doomers_table_db.json  forced_gender_table_db.json  forced_nicknames_table_db.json  gagged_table_db.json  highlights.py  highlights_table_db.json  invites_table_db.json  launch.json  member_roles_table_db.json  member_roles_table_db.json.bak  minecraft.py  post_ids.json  posted_ids.json  purge_commands.py  readme.md  requirements.txt  spammers_table_tb.json
common/: __init__.py  config.py  db.py  discord.py  logger.py  models.py  moderation_db.py  monitor.py  proxies.py  proxies.txt  utils.py
data/: ANALYTICS_SETUP.md
rag/: __init__.py  config.py  embedder.py  retriever.py
scripts/: init_databases.py  prepare_chatbot.py
vision/: __init__.py  florence.py  interrogator.py  parsing.py
(+37 files in other folders)
